llullParser.py
# Generated from llull.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class llullParser ( Parser ):

    grammarFileName = "llull.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "':'", "';'", "'{'", "'}'", 
                     "'('", "')'", "','", "'\"'", "'if'", "'else'", "'while'", 
                     "'for'", "'read'", "'write'", "'='", "'void'", "'array'", 
                     "'set'", "'get'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'<>'", "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "NUM", "COLON", "SEMICOLON", "OPENBRACKET", 
                      "CLOSEDBRACKET", "LEFTPARENTHESIS", "RIGHTPARENTHESIS", 
                      "COMMA", "DOUBLEQUOTE", "IF", "ELSE", "WHILE", "FOR", 
                      "READ", "WRITE", "ASSIGN", "VOID", "ARRAY", "SET", 
                      "GET", "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQUAL", 
                      "BETWEEN", "LESS", "GREATER", "LESSEQUAL", "GREATEREQUAL", 
                      "COMMENT", "ID", "WORD", "WS" ]

    RULE_root = 0
    RULE_expr = 1
    RULE_value = 2
    RULE_number = 3
    RULE_identifier = 4
    RULE_relational = 5
    RULE_string = 6
    RULE_write = 7
    RULE_read = 8
    RULE_assignoperation = 9
    RULE_operation = 10
    RULE_relationaloperation = 11
    RULE_ifconditional = 12
    RULE_elseconditional = 13
    RULE_whileloop = 14
    RULE_forloop = 15
    RULE_method = 16
    RULE_call = 17
    RULE_parameters = 18
    RULE_arguments = 19
    RULE_writearguments = 20
    RULE_body = 21
    RULE_declarearray = 22
    RULE_setarray = 23
    RULE_getarray = 24
    RULE_text = 25

    ruleNames =  [ "root", "expr", "value", "number", "identifier", "relational", 
                   "string", "write", "read", "assignoperation", "operation", 
                   "relationaloperation", "ifconditional", "elseconditional", 
                   "whileloop", "forloop", "method", "call", "parameters", 
                   "arguments", "writearguments", "body", "declarearray", 
                   "setarray", "getarray", "text" ]

    EOF = Token.EOF
    NUM=1
    COLON=2
    SEMICOLON=3
    OPENBRACKET=4
    CLOSEDBRACKET=5
    LEFTPARENTHESIS=6
    RIGHTPARENTHESIS=7
    COMMA=8
    DOUBLEQUOTE=9
    IF=10
    ELSE=11
    WHILE=12
    FOR=13
    READ=14
    WRITE=15
    ASSIGN=16
    VOID=17
    ARRAY=18
    SET=19
    GET=20
    PLUS=21
    MINUS=22
    MULT=23
    DIV=24
    MOD=25
    EQUAL=26
    BETWEEN=27
    LESS=28
    GREATER=29
    LESSEQUAL=30
    GREATEREQUAL=31
    COMMENT=32
    ID=33
    WORD=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def EOF(self):
            return self.getToken(llullParser.EOF, 0)

        def getRuleIndex(self):
            return llullParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = llullParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.expr()
            self.state = 53
            self.match(llullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.MethodContext)
            else:
                return self.getTypedRuleContext(llullParser.MethodContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = llullParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.VOID:
                self.state = 55
                self.method()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(llullParser.IdentifierContext,0)


        def number(self):
            return self.getTypedRuleContext(llullParser.NumberContext,0)


        def getarray(self):
            return self.getTypedRuleContext(llullParser.GetarrayContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = llullParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [llullParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.identifier()
                pass
            elif token in [llullParser.NUM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.number()
                pass
            elif token in [llullParser.GET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.getarray()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(llullParser.NUM, 0)

        def getRuleIndex(self):
            return llullParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = llullParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(llullParser.NUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(llullParser.ID, 0)

        def getRuleIndex(self):
            return llullParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = llullParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(llullParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(llullParser.EQUAL, 0)

        def BETWEEN(self):
            return self.getToken(llullParser.BETWEEN, 0)

        def LESS(self):
            return self.getToken(llullParser.LESS, 0)

        def GREATER(self):
            return self.getToken(llullParser.GREATER, 0)

        def LESSEQUAL(self):
            return self.getToken(llullParser.LESSEQUAL, 0)

        def GREATEREQUAL(self):
            return self.getToken(llullParser.GREATEREQUAL, 0)

        def getRuleIndex(self):
            return llullParser.RULE_relational

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational" ):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)




    def relational(self):

        localctx = llullParser.RelationalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_relational)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.EQUAL) | (1 << llullParser.BETWEEN) | (1 << llullParser.LESS) | (1 << llullParser.GREATER) | (1 << llullParser.LESSEQUAL) | (1 << llullParser.GREATEREQUAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLEQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.DOUBLEQUOTE)
            else:
                return self.getToken(llullParser.DOUBLEQUOTE, i)

        def text(self):
            return self.getTypedRuleContext(llullParser.TextContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = llullParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(llullParser.DOUBLEQUOTE)
            self.state = 73
            self.text()
            self.state = 74
            self.match(llullParser.DOUBLEQUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(llullParser.WRITE, 0)

        def LEFTPARENTHESIS(self):
            return self.getToken(llullParser.LEFTPARENTHESIS, 0)

        def writearguments(self):
            return self.getTypedRuleContext(llullParser.WriteargumentsContext,0)


        def RIGHTPARENTHESIS(self):
            return self.getToken(llullParser.RIGHTPARENTHESIS, 0)

        def getRuleIndex(self):
            return llullParser.RULE_write

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = llullParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(llullParser.WRITE)
            self.state = 77
            self.match(llullParser.LEFTPARENTHESIS)
            self.state = 78
            self.writearguments()
            self.state = 79
            self.match(llullParser.RIGHTPARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(llullParser.READ, 0)

        def LEFTPARENTHESIS(self):
            return self.getToken(llullParser.LEFTPARENTHESIS, 0)

        def identifier(self):
            return self.getTypedRuleContext(llullParser.IdentifierContext,0)


        def RIGHTPARENTHESIS(self):
            return self.getToken(llullParser.RIGHTPARENTHESIS, 0)

        def getRuleIndex(self):
            return llullParser.RULE_read

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = llullParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(llullParser.READ)
            self.state = 82
            self.match(llullParser.LEFTPARENTHESIS)
            self.state = 83
            self.identifier()
            self.state = 84
            self.match(llullParser.RIGHTPARENTHESIS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignoperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(llullParser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(llullParser.ASSIGN, 0)

        def operation(self):
            return self.getTypedRuleContext(llullParser.OperationContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_assignoperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignoperation" ):
                return visitor.visitAssignoperation(self)
            else:
                return visitor.visitChildren(self)




    def assignoperation(self):

        localctx = llullParser.AssignoperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignoperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.identifier()
            self.state = 87
            self.match(llullParser.ASSIGN)
            self.state = 88
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTPARENTHESIS(self):
            return self.getToken(llullParser.LEFTPARENTHESIS, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.OperationContext)
            else:
                return self.getTypedRuleContext(llullParser.OperationContext,i)


        def RIGHTPARENTHESIS(self):
            return self.getToken(llullParser.RIGHTPARENTHESIS, 0)

        def MINUS(self):
            return self.getToken(llullParser.MINUS, 0)

        def number(self):
            return self.getTypedRuleContext(llullParser.NumberContext,0)


        def value(self):
            return self.getTypedRuleContext(llullParser.ValueContext,0)


        def MULT(self):
            return self.getToken(llullParser.MULT, 0)

        def DIV(self):
            return self.getToken(llullParser.DIV, 0)

        def MOD(self):
            return self.getToken(llullParser.MOD, 0)

        def PLUS(self):
            return self.getToken(llullParser.PLUS, 0)

        def getRuleIndex(self):
            return llullParser.RULE_operation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)



    def operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = llullParser.OperationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_operation, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [llullParser.LEFTPARENTHESIS]:
                self.state = 91
                self.match(llullParser.LEFTPARENTHESIS)
                self.state = 92
                self.operation(0)
                self.state = 93
                self.match(llullParser.RIGHTPARENTHESIS)
                pass
            elif token in [llullParser.MINUS]:
                self.state = 95
                self.match(llullParser.MINUS)
                self.state = 96
                self.number()
                pass
            elif token in [llullParser.NUM, llullParser.GET, llullParser.ID]:
                self.state = 97
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 106
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = llullParser.OperationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 100
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 101
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.MULT) | (1 << llullParser.DIV) | (1 << llullParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 102
                        self.operation(6)
                        pass

                    elif la_ == 2:
                        localctx = llullParser.OperationContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 103
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 104
                        _la = self._input.LA(1)
                        if not(_la==llullParser.PLUS or _la==llullParser.MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 105
                        self.operation(5)
                        pass

             
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RelationaloperationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relational(self):
            return self.getTypedRuleContext(llullParser.RelationalContext,0)


        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.OperationContext)
            else:
                return self.getTypedRuleContext(llullParser.OperationContext,i)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ValueContext)
            else:
                return self.getTypedRuleContext(llullParser.ValueContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_relationaloperation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationaloperation" ):
                return visitor.visitRelationaloperation(self)
            else:
                return visitor.visitChildren(self)




    def relationaloperation(self):

        localctx = llullParser.RelationaloperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_relationaloperation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 111
                self.operation(0)
                pass

            elif la_ == 2:
                self.state = 112
                self.value()
                pass


            self.state = 115
            self.relational()
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 116
                self.operation(0)
                pass

            elif la_ == 2:
                self.state = 117
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfconditionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(llullParser.IF, 0)

        def LEFTPARENTHESIS(self):
            return self.getToken(llullParser.LEFTPARENTHESIS, 0)

        def relationaloperation(self):
            return self.getTypedRuleContext(llullParser.RelationaloperationContext,0)


        def RIGHTPARENTHESIS(self):
            return self.getToken(llullParser.RIGHTPARENTHESIS, 0)

        def OPENBRACKET(self):
            return self.getToken(llullParser.OPENBRACKET, 0)

        def body(self):
            return self.getTypedRuleContext(llullParser.BodyContext,0)


        def CLOSEDBRACKET(self):
            return self.getToken(llullParser.CLOSEDBRACKET, 0)

        def elseconditional(self):
            return self.getTypedRuleContext(llullParser.ElseconditionalContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_ifconditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfconditional" ):
                return visitor.visitIfconditional(self)
            else:
                return visitor.visitChildren(self)




    def ifconditional(self):

        localctx = llullParser.IfconditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifconditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(llullParser.IF)
            self.state = 121
            self.match(llullParser.LEFTPARENTHESIS)
            self.state = 122
            self.relationaloperation()
            self.state = 123
            self.match(llullParser.RIGHTPARENTHESIS)
            self.state = 124
            self.match(llullParser.OPENBRACKET)
            self.state = 125
            self.body()
            self.state = 126
            self.match(llullParser.CLOSEDBRACKET)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.ELSE:
                self.state = 127
                self.elseconditional()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseconditionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(llullParser.ELSE, 0)

        def OPENBRACKET(self):
            return self.getToken(llullParser.OPENBRACKET, 0)

        def body(self):
            return self.getTypedRuleContext(llullParser.BodyContext,0)


        def CLOSEDBRACKET(self):
            return self.getToken(llullParser.CLOSEDBRACKET, 0)

        def getRuleIndex(self):
            return llullParser.RULE_elseconditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseconditional" ):
                return visitor.visitElseconditional(self)
            else:
                return visitor.visitChildren(self)




    def elseconditional(self):

        localctx = llullParser.ElseconditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_elseconditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(llullParser.ELSE)
            self.state = 131
            self.match(llullParser.OPENBRACKET)
            self.state = 132
            self.body()
            self.state = 133
            self.match(llullParser.CLOSEDBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileloopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(llullParser.WHILE, 0)

        def LEFTPARENTHESIS(self):
            return self.getToken(llullParser.LEFTPARENTHESIS, 0)

        def relationaloperation(self):
            return self.getTypedRuleContext(llullParser.RelationaloperationContext,0)


        def RIGHTPARENTHESIS(self):
            return self.getToken(llullParser.RIGHTPARENTHESIS, 0)

        def OPENBRACKET(self):
            return self.getToken(llullParser.OPENBRACKET, 0)

        def body(self):
            return self.getTypedRuleContext(llullParser.BodyContext,0)


        def CLOSEDBRACKET(self):
            return self.getToken(llullParser.CLOSEDBRACKET, 0)

        def getRuleIndex(self):
            return llullParser.RULE_whileloop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileloop" ):
                return visitor.visitWhileloop(self)
            else:
                return visitor.visitChildren(self)




    def whileloop(self):

        localctx = llullParser.WhileloopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whileloop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(llullParser.WHILE)
            self.state = 136
            self.match(llullParser.LEFTPARENTHESIS)
            self.state = 137
            self.relationaloperation()
            self.state = 138
            self.match(llullParser.RIGHTPARENTHESIS)
            self.state = 139
            self.match(llullParser.OPENBRACKET)
            self.state = 140
            self.body()
            self.state = 141
            self.match(llullParser.CLOSEDBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForloopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(llullParser.FOR, 0)

        def LEFTPARENTHESIS(self):
            return self.getToken(llullParser.LEFTPARENTHESIS, 0)

        def assignoperation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AssignoperationContext)
            else:
                return self.getTypedRuleContext(llullParser.AssignoperationContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.SEMICOLON)
            else:
                return self.getToken(llullParser.SEMICOLON, i)

        def relationaloperation(self):
            return self.getTypedRuleContext(llullParser.RelationaloperationContext,0)


        def RIGHTPARENTHESIS(self):
            return self.getToken(llullParser.RIGHTPARENTHESIS, 0)

        def OPENBRACKET(self):
            return self.getToken(llullParser.OPENBRACKET, 0)

        def body(self):
            return self.getTypedRuleContext(llullParser.BodyContext,0)


        def CLOSEDBRACKET(self):
            return self.getToken(llullParser.CLOSEDBRACKET, 0)

        def getRuleIndex(self):
            return llullParser.RULE_forloop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForloop" ):
                return visitor.visitForloop(self)
            else:
                return visitor.visitChildren(self)




    def forloop(self):
